lib/sdk4nfc_starter201J/NFCAccessLibrary/include/felica_nfc_library.h

/* DEVICE_TYPE_NFC_14443A_18092_106K */
typedef struct {
	unsigned long target_number;
	unsigned short sens_res;
	unsigned char sel_res;
	unsigned char NFCID1_size;
	unsigned char NFCID1[10];
	unsigned char ATS_size;
	unsigned char ATS[1];
} DEVICE_DATA_NFC_14443A_18092_106K;
/* DEVICE_TYPE_NFC_14443B_106K */
typedef struct {
	unsigned long target_number;
	unsigned char ATQB[12];
	unsigned char ATTRIB_size;
	unsigned char ATTRIB[1];
} DEVICE_DATA_NFC_14443B_106K;
/* DEVICE_TYPE_NFC_18092_212K or 424K */
typedef struct {
	unsigned char id;
	unsigned long target_number;
	unsigned char NFCID2[8];
	unsigned char Pad[8];
	unsigned char RD_size;
	unsigned char RD[1];
} DEVICE_DATA_NFC_18092_212_424K;
typedef struct {
	unsigned long target_device;
	unsigned char dev_info[1];
} DEVICE_INFO;
LIBRARY_API bool felicalib_nfc_initialize(void);
LIBRARY_API bool felicalib_nfc_uninitialize(void);
LIBRARY_API bool felicalib_nfc_open(char *port_name);
LIBRARY_API bool felicalib_nfc_close(void);
LIBRARY_API bool felicalib_nfc_start_poll_mode(unsigned long target_device);
LIBRARY_API bool felicalib_nfc_stop_poll_mode(void);
LIBRARY_API bool felicalib_nfc_start_dev_access(unsigned long target_number);
LIBRARY_API bool felicalib_nfc_stop_dev_access(unsigned long stop_mode);
LIBRARY_API bool felicalib_nfc_select_device(void);
LIBRARY_API bool felicalib_nfc_deselect_device(void);
LIBRARY_API bool felicalib_nfc_thru(
	const unsigned char *command_packet_data,
	unsigned short command_packet_data_length,
	unsigned char *response_packet_data,
	unsigned short *response_packet_data_length
);
LIBRARY_API bool felicalib_nfc_set_timeout(unsigned long timeout);
LIBRARY_API bool felicalib_nfc_get_timeout(unsigned long *timeout);
LIBRARY_API bool felicalib_nfc_set_poll_callback_parameters(
	HWND handle,
	const unsigned char *msg_str_of_find,
	const unsigned char *msg_str_of_enable
);
LIBRARY_API bool felicalib_nfc_get_last_error(unsigned long *error_info);
LIBRARY_API bool felicalib_nfc_start_logging(const char *filename);
LIBRARY_API bool felicalib_nfc_stop_logging(void);